# moex-alerter-bot

./: .gitignore  LICENSE  README.md  docker-compose.yml  linter.sh  pyproject.toml
.github/workflows/: bot_cd.yml  bot_ci.yml
migration/: env.py
migration/versions/: a93f8bb12258_initial.py
moex_alerter_bot/: config.py  handlers.py  main.py  routes.py
moex_alerter_bot/core/: check_price.py  db.py  moex_api_client.py
moex_alerter_bot/handlers/: main_handlers.py  stock_analyze_handlers.py  stock_handlers.py
moex_alerter_bot/keyboards/: callback_data.py  inline.py
moex_alerter_bot/models/: stock.py
moex_alerter_bot/utils/: basic.py  commands.py  states.py
systemd/: moex_alerter_bot.service
tests/: test_basic.py
